tests/NormalTests/paczka1/fuzzy1/59064956.err
Error in line 3: qYxG1 S859 43,0
Error in line 6: qYxG1 A12 40,1
Error in line 1: K5bQyOKkqQ A661 50,1
Error in line 11: qYxG1 A580 93,9
Error in line 13: K5bQyOKkqQ S859 38,7
Error in line 27: LjTg4 A580 71,3
